adds styling to the dynamic components

--- a/src/app/components/album/album.component.html
+++ b/src/app/components/album/album.component.html
@@ -1,1 +1,16 @@
-<p>album works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <h2>Albums</h2>
+        </div>
+        <div class="col-md-3 col-12">
+            <div class="album-cover">
+                <img src="https://images.unsplash.com/photo-1579463148228-138296ac3b98?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=3&w=256&h=256&q=80" alt="">
+            </div>
+            <div class="my-3">
+                <h5>In my room</h5>
+                <p>2016</p>
+            </div>
+        </div>
+    </div>
+</div>
