--- a/src/app/pages/artists-detail-view/artists-detail-view.component.html
+++ b/src/app/pages/artists-detail-view/artists-detail-view.component.html
@@ -1,1 +1,20 @@
 <app-top-nav></app-top-nav>
+
+<div class="container-fluid">
+    <div class="row p-4">
+        <div class="col-md-8 col-12">
+            <div style="background-image: url(https://images.unsplash.com/photo-1579463148228-138296ac3b98?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=3&w=256&h=256&q=80);" class="image-grid-cover">
+                <div class="cover-wrapper p-4">
+                    <h1>Etkinlikler</h1>
+                    <p><b>382K</b>fans</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-4">
+            <h3>Top tracks</h3>
+            <app-track></app-track>
+        </div>
+    </div>
+    <app-album></app-album>
+</div>
+
