--- a/src/app/components/top-nav/top-nav.component.html
+++ b/src/app/components/top-nav/top-nav.component.html
@@ -2,14 +2,18 @@
     <div class="row d-flex align-items-center bg-light-grey py-3">
         <div class="col-1">
             <div class="d-flex justify-content-center">
-                <a href="#" class="avatar avatar-xl rounded-circle">
-                  <img alt="..." src="https://images.unsplash.com/photo-1579463148228-138296ac3b98?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=3&w=256&h=256&q=80">
+                <a routerLink="/" class="avatar avatar-xl rounded-circle">
+                  <img alt="logo" src="assets/logos/Colored_Equalizer@2x.png">
                 </a>
             </div>
         </div>
-        <div class="col-6">
+        <div class="col-6" *ngIf="showSearch">
             <div class="mb-3">
-                <input type="text" class="form-control" placeholder="Search artist">
+                <input
+                    matInput
+                    [formControl]="searchControl"
+                    class="form-control" 
+                    placeholder="Search artist">
             </div>
         </div>
     </div>
