fixes linting issues

--- a/src/app/pages/artists-list-view/artists-list-view.component.html
+++ b/src/app/pages/artists-list-view/artists-list-view.component.html
@@ -1,6 +1,6 @@
 <app-top-nav
     [showSearch]="true"
-    (onArtistsRetrieved)="onArtistsRetrieved($event)"
+    (artistsRetrieved)="artistsRetrieved($event)"
 ></app-top-nav>
 
 <div class="row">
